--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ colorama==0.4.6
 entrypoints==0.4
 gitdb==4.0.11
 GitPython==3.1.43
+greenlet==3.0.3
 idna==3.7
 Jinja2==3.1.4
 jsonschema==4.23.0
@@ -34,6 +35,7 @@ rich==13.7.1
 rpds-py==0.20.0
 six==1.16.0
 smmap==5.0.1
+SQLAlchemy==2.0.32
 streamlit==1.37.1
 streamlit-aggrid==1.0.5
 tenacity==8.5.0
@@ -44,4 +46,3 @@ typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
 watchdog==4.0.2
-
